--- a/app/src/main/res/layout/activity_sales_display_with_filter.xml
+++ b/app/src/main/res/layout/activity_sales_display_with_filter.xml
@@ -3,12 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/order_refresher"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mobile.order.activity.SalesOrderDisplayActivity">
+    tools:context="com.mobile.order.activity.SalesOrderSimpleDisplayActivity">
 
    <RelativeLayout
        android:layout_width="match_parent"
@@ -23,8 +19,8 @@
             app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
             app:title="@string/app_name"
             app:titleMarginStart="24dp"
-            app:titleTextColor="@android:color/white" />
-
+            app:titleTextColor="@android:color/white" >
+      </android.support.v7.widget.Toolbar>
        <FrameLayout
            android:id="@+id/filter_bar_container"
            android:layout_width="match_parent"
@@ -110,7 +106,7 @@
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_bar_container"
-           android:layout_marginTop="0dp"
+           android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:paddingLeft="@dimen/card_item_padding"
            android:paddingTop="@dimen/card_item_padding"
@@ -160,7 +156,6 @@
        </android.support.v7.widget.CardView>
 </LinearLayout>
    </RelativeLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_sales_order"
 
