--- a/app/src/main/res/layout/display_added_sales_item.xml
+++ b/app/src/main/res/layout/display_added_sales_item.xml
@@ -66,6 +66,11 @@
                         android:text="@string/last_name"
                         android:textSize="@dimen/title_text"
                         android:inputType="textNoSuggestions"/>
+                    <ImageView
+                        android:id="@+id/delete"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/close"/>
             </LinearLayout>
 </android.support.v7.widget.CardView >
 </ScrollView>
