--- a/app/src/main/res/layout/display_update_sales_person_item.xml
+++ b/app/src/main/res/layout/display_update_sales_person_item.xml
@@ -39,6 +39,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/sales_person_id"
+                    android:maxLength="10"
                     android:textSize="@dimen/title_text"
                     android:inputType="textNoSuggestions"/>
                 <EditText
@@ -49,6 +50,7 @@
                     android:gravity="center"
                     android:layout_weight=".5"
                     android:text="@string/first_name"
+                    android:maxLength="30"
                     android:textSize="@dimen/title_text"
                     android:inputType="textNoSuggestions"/>
                 <EditText
@@ -59,6 +61,7 @@
                     android:gravity="center"
                     android:layout_weight=".5"
                     android:text="@string/last_name"
+                    android:maxLength="30"
                     android:textSize="@dimen/title_text"
                     android:inputType="textNoSuggestions"/>
             </LinearLayout>
