--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="white">#FFFFFF</color>
     <color name="dark_grey">#424242</color>
     <color name="medium_grey">#9E9E9E</color>
+ <color name="very_medium_grey">#eae8e8</color>
     <color name="light_grey">#C0C0C0</color>
     <color name="button_grey">#757575</color>
     <color name="brownishGray">#6a6a6a</color>
