--- a/app/src/main/res/layout/fragment_addsales_product.xml
+++ b/app/src/main/res/layout/fragment_addsales_product.xml
@@ -53,21 +53,34 @@
                             android:layout_height="wrap_content"
                             android:text="@string/product_name" />
 
-                        <EditText
+                      <!--  <EditText
                             android:id="@+id/enter_product"
-                            android:layout_width="80dp"
+                            android:layout_width="110dp"
                             android:layout_height="40dp"
-                            android:layout_weight="1"
+                            android:layout_weight=".5"
                             android:ems="10"
-                            android:inputType="numberDecimal" />
+                            android:text="sdsdsdsd"
+                            android:inputType="numberDecimal"
+                            android:hint="product id"/>-->
 
+                        <AutoCompleteTextView
+                            android:id="@+id/product_autoComplete"
+                            android:layout_width="110dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="true"
+                            android:ems="10"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true">
+
+                            <requestFocus />
+                        </AutoCompleteTextView>
                         <TextView
                             android:id="@+id/tv_mrp"
                             android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:text="@string/mrp" />
 
-                        <TextView
+                        <EditText
                             android:id="@+id/mrp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
