--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -61,15 +61,14 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lbl_product_name" />
+
         <TextView
             android:id="@+id/lbl_product_id"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="33dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/product_id"
-            android:maxLength="8"
-            android:inputType="number"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/productname_error_msg" />
 
@@ -79,6 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:hint="Product Id"
+            android:inputType="number"
             android:maxLength="10"
             app:layout_constraintBaseline_toBaselineOf="@+id/lbl_product_id"
             app:layout_constraintEnd_toEndOf="parent"
