--- a/app/src/main/res/layout/display_update_products_item.xml
+++ b/app/src/main/res/layout/display_update_products_item.xml
@@ -23,8 +23,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
+            android:orientation="horizontal">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,8 +47,8 @@
     android:text="@string/product_id"
     android:textSize="@dimen/title_text"
         android:maxLength="8"
-    android:layout_weight="1"
-    android:inputType="textNoSuggestions"/>
+        android:inputType="number"
+    android:layout_weight="1"/>
 
     <EditText
 
@@ -101,9 +105,24 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="0.00"
-                    android:textSize="@dimen/title_text" />
-
+                    android:layout_weight="0.87"
+                    android:textSize="@dimen/title_text"
+                    android:inputType="numberDecimal"/>
+<TextView
+    android:id="@+id/product_doc_id"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:visibility="gone"/>
             </LinearLayout>
+
+    </LinearLayout>
+            <ImageView
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="end|center_vertical"
+                android:foregroundGravity="right"
+                android:src="@drawable/close"/>
         </LinearLayout>
 </android.support.v7.widget.CardView >
 </ScrollView>
