--- a/app/src/main/res/menu/welcome.xml
+++ b/app/src/main/res/menu/welcome.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/mybutton"
-        android:title=""
+        android:id="@+id/refresh"
+        android:title="@string/refresh"
         app:showAsAction="always"
-        android:icon="@drawable/back_arrow"
-        />
-
-
+        android:iconTint="@color/white"
+        android:icon="@drawable/refresh"/>
     <item
         android:id="@+id/action_logout"
         android:title="@string/logout"
-        android:orderInCategory="100"/>
+        app:showAsAction="always"
+        android:icon="@drawable/logout"/>
+    <!--android:orderInCategory="100"-->
 </menu>
