--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -32,7 +32,17 @@
 
 
         </android.support.design.widget.AppBarLayout>
+        <TextView
+            android:id="@+id/product_doc_id"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:hint="Product Name"
+            app:layout_constraintEnd_toEndOf="parent"
 
+            app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
+           android:visibility="gone" />
         <TextView
             android:id="@+id/lbl_product_name"
             android:layout_width="wrap_content"
