--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -15,7 +15,7 @@
 
         <TextView
             android:id="@+id/lblSyncProduct"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:text="@string/product_name"
@@ -24,11 +24,12 @@
 
         <Button
             android:id="@+id/sync_product"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:text="@string/sync"
-            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:background="@drawable/round_corner_button"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,7 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:text="@string/sync"
-            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:background="@drawable/round_corner_button"/>
     </LinearLayout>
 </LinearLayout>
 </android.support.constraint.ConstraintLayout>
