--- a/app/src/main/res/layout/display_update_products_item.xml
+++ b/app/src/main/res/layout/display_update_products_item.xml
@@ -21,6 +21,7 @@
 
 
         <LinearLayout
+            android:id="@+id/row"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -38,7 +39,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
-    <EditText
+    <TextView
 
     android:id="@+id/product_id"
     android:layout_width="wrap_content"
@@ -50,7 +51,7 @@
         android:inputType="number"
     android:layout_weight="1"/>
 
-    <EditText
+    <TextView
 
                     android:id="@+id/product_name"
                     android:layout_width="wrap_content"
@@ -94,11 +95,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="@string/location"
                     android:entries="@array/unit_type"
                     android:textSize="@dimen/title_text" />
 
-                <EditText
+                <TextView
 
                     android:id="@+id/retail_price"
                     android:layout_width="wrap_content"
